--- a/test/fixtures/sample.tex
+++ b/test/fixtures/sample.tex
@@ -1,9 +1,9 @@
 %% begin
-\section{テスト}\hypertarget{テスト}{}\label{テスト}
+\chapter*{テスト}\hypertarget{テスト}{}\label{テスト}
 
 これは\textbf{テスト}です。
 
-\subsubsection{節見出し}\hypertarget{節見出し}{}\label{節見出し}
+\subsection*{節見出し}\hypertarget{節見出し}{}\label{節見出し}
 
 \_節\_の\href{https://example.jp/}{テスト}です。
 
@@ -25,11 +25,11 @@ end
 \rule{3in}{0.4pt}
 \end{center}
 
-\section{続き}\hypertarget{続き}{}\label{続き}
+\chapter*{続き}\hypertarget{続き}{}\label{続き}
 
 \ruby[g]{続}{つづ}きの\ruby[g]{章}{しょう}です。\rensuji{12}といった\ruby[g]{縦中横}{たてちゅうよこ}も書けます。
 
-\subsection{箇条書き}\hypertarget{箇条書き}{}\label{箇条書き}
+\section*{箇条書き}\hypertarget{箇条書き}{}\label{箇条書き}
 
 \begin{itemize}
 \item{} 1
@@ -53,7 +53,7 @@ end
 \end{itemize}
 \end{itemize}
 
-\subsection{連番つき箇条書き}\hypertarget{連番つき箇条書き}{}\label{連番つき箇条書き}
+\section*{連番つき箇条書き}\hypertarget{連番つき箇条書き}{}\label{連番つき箇条書き}
 
 \begin{enumerate}
 \item{} 1
