--- a/test/fixtures/sample.tex
+++ b/test/fixtures/sample.tex
@@ -7,15 +7,13 @@
 
 \_節\_の\href{https://example.jp/}{テスト}です。
 
-\begin{lstlisting}[showspaces=false,showtabs=false,language=ruby,basicstyle=\ttfamily\footnotesize,columns=fixed,frame=tlbr]
-class Hello
+\begin{verbatim}class Hello
   # say hello
   def hello
     p "hello!"
   end
 end
-
-\end{lstlisting}   %  class="language-ruby"
+\end{verbatim}
 
 
 
