support images in latex

--- a/test/fixtures/sample.tex
+++ b/test/fixtures/sample.tex
@@ -15,13 +15,7 @@
 end
 \end{verbatim}
 
-\begin{figure}
-\begin{center}
-\includegraphics{img/dummy.png}
-\end{center}
-\caption{img}
-
-\end{figure}
+\includegraphics[angle=0]{img/dummy.png}
 
 ↓Markdownとして解釈するとただの\texttt{\textless{}hr /\textgreater{}}になります。Cheepub::Contentで解釈するとページを分割します。
 
